[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2.2"
serde = { version = "1.0.198", features = ["derive"] }
sha256 = "1.5.0"
uint = "0.10.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
k256 = { version = "0.13.3", features = ["serde", "pem"] }
ecdsa = { version = "0.16.9", features = ["signing", "verifying",
"serde", "pem"] }
hex = "0.4.3"
primitive-types = "0.13.1"
rand = "0.9.0"
